[package]
name = "vulkan-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "triangle"
path = "src/triangle.rs"

[[bin]]
name = "rectangle"
path = "src/rectangle.rs"

[[bin]]
name = "rotating-rectangle"
path = "src/rotating-rectangle.rs"

[[bin]]
name = "image"
path = "src/image.rs"

[[bin]]
name = "projection"
path = "src/projection.rs"

[dependencies]
bytemuck = { version = "1.13.0", features = ["derive", "extern_crate_std", "min_const_generics"] }
cgmath = "0.18.0"
glium = "0.32.1"
png = "0.17.7"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
vulkano-util = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27"
